--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -290,3 +290,21 @@ i{
     border-radius: 5px;
     vertical-align: middle;
 }
+.pagination {
+    display: flex;
+    /* justify-content:flex-end; */
+    position: absolute;
+    right: 20px;
+    gap: 10px;
+    color: #fff;
+    background-color: #000;
+}
+#pg-btn{
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-color: #00bb5f;
+    color: #fff;
+    font-size: 18px;
+    cursor: pointer;
+}
